@@ -2,10 +2,19 @@ GNU coreutils NEWS                                    -*- outline -*-
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+** Bug fixes
+
   df now fails when the list of mounted file systems (/etc/mtab) cannot
   be read, yet the file system type information is needed to process
   certain options like -a, -l, -t and -x.
   [This bug was present in "the beginning".]
+
+** New features
+
+  rm now accepts the --dir (-d) option which makes it remove empty directories.
+  Since removing empty directories is relatively safe, this option can be
+  used as a part of the alias rm='rm --dir'.  This improves compatibility
+  with Mac OS X and BSD systems which also honor the -d option.
 
 
 * Noteworthy changes in release 8.18 (2012-08-12) [stable]
